@@ -20,8 +20,8 @@ git clone "https://github.com/end2endzone/RapidAssist.git"
 cd RapidAssist
 echo
 
-echo Checking out version v0.5.0...
-git -c advice.detachedHead=false checkout 0.5.0
+echo Checking out version v0.9.1...
+git -c advice.detachedHead=false checkout 0.9.1
 echo
 
 echo ============================================================================
