@@ -1,6 +1,8 @@
 Changes for 1.4.0:
 
 * New feature: Support for ESP8266.
+* New feature: Using win32Arduino v2.4.0
+* New feature: Using RapidAssist v0.9.1
 * Fixed issue #5: error: invalid conversion from 'long unsigned int (*)()' to 'SoftTimer::CounterFunctionPointer {aka unsigned int (*)()}' [-fpermissive]
 * Fixed issue #6: Build on GitHub Actions
 
